--- a/projects/casio-calculator-picaxe-sensors.html
+++ b/projects/casio-calculator-picaxe-sensors.html
@@ -84,7 +84,7 @@
 	He knew that investigating how the world works requires seeing more than the eyes alone can reveal.
 	School science equipment is limited, with expensive data loggers and sensors reserved for senior classes.
  	After teaching Chemistry, Biology, Physics and Calculus, he wondered if he could invent a low cost system that would permit authentic hands-on data collection for cross-curricula learning in these subject.</p> 
-<p>He was using Picaxe microcontrollers with his Nexus Research Group students, so he focused on connecting a Picaxe-18 to a Casio FX-9750 graphic  calculator. He invented a reliable and robust connector and interface circuit for bi-directional communication. This upgrades the Casio FX-9750 and Casio FX-9860 graphic calulators to robot remote control units as well as Picaxe (or Arduino) sensor data display units.</p>
+<p>He was using Picaxe microcontrollers with his Nexus Research Group students, so he focused on connecting a Picaxe-18 to a Casio FX-9750 graphic calculator. He invented a reliable and robust connector and interface circuit for bi-directional communication. This upgrades the Casio FX-9750 and FX-9860 graphic caclulators to robot remote control units as well as Picaxe (or Arduino) sensor data display units.</p>
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
             <li>Michael pioneered classroom trials for using a standard school Casio graphic calulator as a datalogger sensor system for cross-curricular learning.</li>
