--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -94,7 +94,7 @@
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
             <li>Michael pioneered the concept of using digital multimeters as substitutes for data loggers for cross-curricular learning at all levels.</li>
-            <li>He developed a wide range of DIY home-made and low-cost sensors, many cost just a few cents. Sensors can measure water vapour, temperature, pressure, alpha radiation, visible light, ultra violet (UV) light, infra red (IR) light, water hardness, static electric fields, mobile phone signals, angles, magnetic fields, and salinity.</li>
+            <li>He developed a wide range of DIY home-made and low-cost sensors, many cost just a few cents. Sensors can measure water vapour, temperature, pressure, alpha radiation, visible light, ultra-violet (UV) light, infra-red (IR) light, water hardness, static electric fields, mobile phone signals, angles, magnetic fields, and salinity.</li>
 	    <li>These robust digital multimeters (DMM) can be used in a wide variety of subjects, such as Physical Education, Horticulture, Calculus and Statistics.</li>
             <li>Michael invented the "Build it, Test it, Use it" pedagogy for inquiry-based learning and discovery at home as well as school.</li>
 	    <li>He promoted affordable, inquiry-driven cross-curricula learning sharing his research at conferences, through publications, and on his Nexus Research Group website.</li>
