--- a/projects/casio-calculator-picaxe-sensors.html
+++ b/projects/casio-calculator-picaxe-sensors.html
@@ -109,7 +109,7 @@ The cable used for this connection is the Casio SB-62, which is a 3-pin to 3-pin
 </p>
           <ul>
             <li><strong>Build a sensor</strong> - a ‘howto’ description for using the picaxe sensor unit and setting up the Casio FX-9750 calculator.</li>
-            <li><strong>Test your sensor</strong> - an activity already tested by the teacher to demonstrate the equipment has been assembled correctly and is performing as expected. With senior classes in maths or science, it was expected some sensors would need calibrating, a useful additional skill. A Calulus class was given a CSI scenario requiring a cooling curve to determine time death.</li>
+            <li><strong>Test your sensor</strong> - an activity already tested by the teacher to demonstrate the equipment has been assembled correctly and is performing as expected. With senior classes in maths or science, it was expected some sensors would need calibrating, a useful additional skill. A Calculus class was given a CSI scenario requiring a cooling curve to determine time death.</li>
 	    <li><strong>Use your sensor</strong> - students invented their own authentic activity to replace a contrived NCEA task of little relevance or interest to them. Gamification and simulation made for much more engaging summative assessment.</li>
           </ul>
 
