--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -80,7 +80,6 @@
         </ul>
       </div>
     </aside>
-  </div>
     <main id="content" class="content" role="main" tabindex="-1">
       <section class="intro" aria-labelledby="intro-heading">
         <h2 id="intro-heading">Art meets Science with Digital Technology</h2>
@@ -89,7 +88,7 @@
 	He noticed junior science students were excluded from using data loggers and sensors reserved for senior classes; they were expensive and fragile.  
 	Could easily accessible game design software be tricked into working as a gamified science lab? 
 <p>Game software as a digital technology can capture and record data to learn about the world. Processed data can reveal trends and patterns, or time periods (how long), or count frequencies (how often). If each learner has their own no cost, open-sourced, highly adaptable, and easily coded "RIGEL", imagine how much science can be revealed using this technology! And imagine the creativity released to personalise and adapt such a technology.</p>
-<p> RIGEL auto connects and recognises sensors or output devices on PICAXE, Arduino, ESP8266 or ESP32 development boards or similar. A truly universal games, electronics and science link!</p> 
+<p> RIGEL auto connects and recognises sensors or output devices on PICAXE, Arduino, ESP8266 or ESP32 development boards or similar. A truly universal games, electronics and science link!</p>
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
             <li>Science and Technology are interrelated and interdependent. As lenses were invented and improved, tiny single-celled bacteria became observable using a microscope. New science needed better machines that depended on science to make them better. 
@@ -127,8 +126,9 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
 <p> </p>
 	<h3 id="use-it">Use it</h3>
 <p>Learners came up with their own creative and authentic uses for a system such as RIGEL. This activity provided a low floor, high ceiling task at low cost with wide connections to many different learning areas and subjects. Learners were able to remotely monitor or activate equipment, monitor alarms and create a simple security system, monitor and record respiration and heartbeat, practice CPR, and link a player remotely to games on a computer or 3D games projected into a room.</p>
+<img src="../assets/img/cpr-rigel.jpg" alt="Game Maker game design software">
 	<h4 id="authentic-learning-at-school-and-home">Authentic cross-curricula learning at school and home</h4>
-	<p>In general the RIGEL system enabled students to sense more of the world around them. It encouraged learners to get more physically active as they experimented with bicycles, hopping, and dancing to control characters in games they created. They experienced the art, imagination and creativity that is often overlooked in traditional science activities. Students could try and fail. Failure was a learning experience. Students also used the f-word. They reported they had fun!</p>
+<p>In general the RIGEL system enabled students to sense more of the world around them. It encouraged learners to get more physically active as they experimented with bicycles, hopping, and dancing to control characters in games they created. They experienced the art, imagination and creativity that is often overlooked in traditional science activities. Students could try and fail. Failure was a learning experience. Students also used the f-word. They reported they had fun!</p>
 <div class="video-container">
 <iframe 
         src="https://www.youtube.com/embed/mOstMwpkIpA"
@@ -137,7 +137,7 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
         allowfullscreen>
 </iframe>
 </div>
-	<h4 id="making-diy-home-made-sensors">Making low cost DIY home-made sensors</h4>
+<h4 id="making-diy-home-made-sensors">Making low cost DIY home-made sensors</h4>
 	<p>Since the early 2000's Michael has developed a number of sensors; some are shown on his YouTube channel. Some sensors are very simple single component sensors costing a few cents. Other sensors are inexpensive but include a power source and a few more components. Apart from the straightforward voltage, current and resistance measurements, the multi-meters can also detect; visible light, infra-red light, ultra-violet light, ionising radiation such as alpha particles, temperature, angle, bend, salt, humidity, pressure, touch, paper thickness, mobile phone transmissions, static electric fields, and more.</p>
 <p>All of these sensors can be used in the RIGEL game and electronics link, to control game players or be displayed and recorded.  
 <div class="warning-box">
@@ -145,7 +145,7 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
 </div>
 <p>There is no need to calibrate temperature sensors using boiling water. Where in the real world would a student expect to record that temperature? For some reason teachers default to using ice and boiling water to calibrate sensors. If you are investigating cooling curves, YOU should safely get sensor readings at 100 &degC and PROVIDE THIS to learners.</p>
 <p>Always remind learners that scientists work carefully and safely, no matter what they see in movies or TV!</p>
-	<h3 id="presentations">YouTube videos</h3>
+		<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented many of his projects in YouTube videos. Here is the 3D flight simulator. Helping to get students physically fit while inside playing computer games!</p>
 <div class="video-container">
 <iframe 
@@ -158,6 +158,7 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
       <h3>Back to Projects/Research</h3>
 	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
     </main>
+  </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
   <script src="../assets/js/main.js"></script>
 </body>
