--- a/talks.html
+++ b/talks.html
@@ -85,8 +85,9 @@
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Talks">
       <h2>Talks</h2>
       <ul>
+        <li id="feature-interview-and-video"><strong>Michael and Kimberley Fenton Get Kids into Coding and Digital Technology.</strong> — News feature and  video<br /><span class="meta"> <a href="https://www.stuff.co.nz/technology/102483973/robot-competition-replaces-steam-car-challenge-at-taranaki-science-fair" target="_blank" aria-label="Link to article and video">Link to article and video</a></span></li>
         <li id="talk-reclaiming-science"><strong>From Galileo to LIGO: Reclaiming the Maker Space for Science.</strong> — SciCon 2016<br /><span class="meta">Keynote  &middot; <a href="files/michael fenton keynote.pdf" aria-label="Download talk slides as PDF file">Slides (PDF)</a></span></li>
-        <li id="talk-enlightenment-and-education"><strong> Enlightenment and education: a journey through time and space.</strong> — Open Polytechnic Learning conference 2023<br /><span class="meta">Keynote </span></li>
+        <li id="talk-enlightenment-and-education"><strong>Enlightenment and education: a journey through time and space.</strong> — Open Polytechnic Learning conference<br /><span class="meta">Keynote </span></li>
       </ul>
       <p> More to be added soon...</p>
     </main>
