--- a/cv.html
+++ b/cv.html
@@ -122,7 +122,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
       </iframe>
-      </div class>
+      </div>
       <h3>Teaching</h3>
       <ul class="tight">
         <li><strong>Academic & vocational</strong>:
@@ -139,7 +139,6 @@
 	   <li>Research active - long list of education conference publications/presentations.</li>
           </ul>
         </li>
-	<br>
 	<li><strong>STEM subject expertise</strong>:
           <ul>
             <li><strong>Postgraduate</strong>: Level 7 Grad. Dip. Science and Mathematics Education and Education Leadership.</li>
