--- a/index.html
+++ b/index.html
@@ -96,12 +96,9 @@
 	<p>Ahead of his time, Michael volunteered his "spare" time as founder and director of New Zealand’s only research group
 	based in a secondary school. Children of all ages were encouraged to "build it, test it, use it"
 	foreshadowing the Maker Movement and Citizen Science. Former head of JPL, and the main driver for
-	the deep space NASA missions, Sir Dr William ‘Bill’ Pickering was
-	Patron. The motto “Question Everything” encouraged the technically able
+	the deep space NASA missions, <a href="files/michael-fenton-bill-pickering.pdf" target="_blank">Dr William ‘Bill’ Pickering</a> was Patron. The motto “Question Everything” encouraged the technically able
 	as well as the academically inclined learners to make authentic
-	discoveries as citizen scientists. Findings were presented at scientific
-	conferences, provided to the Ministry of Education, and published on the Nexus
-	Research Group website. The website received 5,000 uniqure visitors per month.
+	discoveries as citizen scientists. Findings were presented at <a href="files/michael-fenton-nzms-conference.pdf" target="_blank">research conferences</a>, provided to the Ministry of Education, and published on the <a href="files/michael-fenton-nexus-research-group.pdf" target="_blank">Nexus Research Group</a> website. The website received 5,000 uniqure visitors per month.
 	<p>School students of all ages and abilities regularly won Science Fair awards and prizes,
 	validating Michael's approach of 'teach to interests and abilities, NOT age group'.</p>
 	<h3 id="education-research-and-innovation">Education research and innovation</h3>
