--- a/projects/authentic-problem-based-learning.html
+++ b/projects/authentic-problem-based-learning.html
@@ -194,8 +194,8 @@
         allowfullscreen>
 </iframe>
 </div>
-      <h3>Back to Projects/Research</h3>
-	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
+      <h3>Back to Teaching</h3>
+	<p><a href="../teaching.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Teaching</a></p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
