--- a/teaching.html
+++ b/teaching.html
@@ -84,10 +84,17 @@
       <h2>Teaching</h2>
       <h3>Course Design Principles</h3>
       <ul>
-        <li>Constructivist alignment
+        <li>Pedagogy / Andragogy
           <ul>
-            <li>Iterative feedback loops</li>
-            <li>Assessment for learning</li>
+            <li>Student-led learning / Experiential learning</li>
+            <li>Assessment for learning / Authentic assessment</li>
+          </ul>
+        </li>
+       <li>Teaching / Mentoring
+          <ul>
+            <li>Face-to-face</li>
+            <li>Remote - online / by distance</li>
+	    <li>Blended</li>
           </ul>
         </li>
         <li>Universal Design for Learning (UDL)</li>
