--- a/talks.html
+++ b/talks.html
@@ -90,6 +90,13 @@
         <li id="feature-interview"><strong>Shining a Light on the Future:</strong> Scientist Michael Fenton interview<br /><span class="meta"> <a href="assets/img/michael-fenton-daily-news.jpg" target="_blank" aria-label="Link to article">Link to article</a></span></li>
         <li id="talk-enlightenment-and-education"><strong>Enlightenment and education: a journey through time and space.</strong> — Open Polytechnic Learning conference<br /><span class="meta">Keynote </span></li>
       </ul>
+	<h2>Science communication</h2>
+      <ul>
+        <li id="bill-pickering-nexus-research-group"><strong>Bill Pickering - Rocket Man.</strong> — by Michael Fenton, fact-checked by Bill Pickering<br /><span class="meta"> <a href="files/michael-fenton-bill-pickering.pdf" target="_blank" aria-label="Link to published article, New Zealand Science Teacher Journal">Link to published article, New Zealand Science Teacher Journal</a></span></li>
+      </ul>
+      <ul>
+        <li id="poster-science-education-network"><strong>The Dinosaurs Inside Us and Other Freaky Facts.</strong> — by Michael Fenton<br /><span class="meta"> <a href="files/michael-fenton-dinosaurs-inside-us.pdf" target="_blank" aria-label="Link to poster">Link to poster, 3D glasses friendly!</a></span></li>
+      </ul>
       <p> More to be added soon...</p>
     </main>
   </div>
