--- a/talks.html
+++ b/talks.html
@@ -97,6 +97,9 @@
       <ul>
         <li id="poster-science-education-network"><strong>The Dinosaurs Inside Us and Other Freaky Facts.</strong> — by Michael Fenton<br /><span class="meta"> <a href="files/michael-fenton-dinosaurs-inside-us.pdf" target="_blank" aria-label="Link to poster">Link to poster, 3D glasses friendly!</a></span></li>
       </ul>
+      <ul>
+        <li id="michael-fenton-hpv-dvd-errors"><strong>Ministry of Health HPV DVD contains gross errors of fact</strong> — corrected after publicity from Michael Fenton<br /><span class="meta"> <a href="files/michael-fenton-HPV-DVD.pdf" target="_blank" aria-label="Link to article">Link to article - a nationally significant science education issue!</a></span></li>
+      </ul>
       <p> More to be added soon...</p>
     </main>
   </div>
