--- a/teaching.html
+++ b/teaching.html
@@ -108,6 +108,16 @@
             <li>Intermediate - Digital Technology - robotics and game design (Years 7 - 8).</li>
 	    <li>Secondary - Biology, Chemistry, Physics, Earth and Space, Mathematics, Calculus, Robotics & Game design (Years 9 - 13).</li>
           </ul>
+	<h3>Teaching Leadership</h3>
+          <ul>
+            <li>Education Lead - Private Training Establishment (PTE); Agriculture and Construction.</li>
+            <li>Programme Leader - Open Polytechnic and the Western Institute of Technology at Taranaki.</li>
+            <li>Green School New Zealand - leader of Science and Mathematics programmes (Year 7 - 13). Cross-curricula course design and assessment.</li>
+            <li>Workshop Developer and Facilitator - CORE Education. Science Teacher Fellowship programmes.</li>
+	    <li>Workshop Developer and Facilitator - Focus Consultancy. Assessment design & moderation.</li>
+	    <li>Instructional Designer - EarnLearn. Assessment design & learning resources. Mathematics and Science expert.</li>
+          </ul>
+
       <h3>Combined STEM for old and young - TV and movie props</h3>
       <figure>
         <img src="assets/img/b9.jpg" alt="Prototype B9 mobile robot and science lab. AI interactive voice control." width="400" height="400"/>
