--- a/workshops.html
+++ b/workshops.html
@@ -82,7 +82,10 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Workshops">
       <h2>Workshops</h2>
-      <ul>
+	<ul>
+        <li id="tradies-to-tutors"><strong>Transforming From Trades Professional to Vocational Tutor</strong> - Workshop.<br /><span class="meta"> <a href="files/michael-fenton-vocational-teaching-workshop.pdf" target="_blank" aria-label="Link to workshop notes for new tutors">Link to workshop notes for new tutors</a></span></li>
+      </ul>
+	<ul>
         <li><strong>Portfolio learning design and assessment design and moderation for learners working through numeracy unit standards.</strong> (2020)<br /><span class="meta">Workshop &middot; </span>Toi Ohomai Institute of Technology.</li>
       </ul>
       <p> More to be added soon...</p>
