--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <p class="meta">Prototype &middot; 2025</p>
           <p>An interactive voice controlled robot and mobile science lab. A working B9 robot from the TV show "Lost in Space" to engage learners in maths and science. Students can make their own new friend!</p>
           <ul>
-            <li>Uses ESP32, Picaxe, DF2301Q and DY-SV5W modules at 5 volts.</li>
+            <li>Uses standalone AI, ESP32, Picaxe, DF2301Q and DY-SV5W modules at 5 volts.</li>
             <li>Supports RIGEL and DMM sensors, broadcasts real-time data as web served graphs to laptops and smart phones.</li>
             <li>Designed for classroom resilience, learner engagement and modification. Speaks any language.</li>
           </ul>
@@ -169,6 +169,12 @@
       </section>
       <section aria-labelledby="sample-publications-heading">
         <h3 id="sample-publications-heading">Sample Publications</h3>
+<article class="card" aria-labelledby="project1-title">
+          <h4 id="publication1-title">Artificial Intelligence (AI) in Education</h4>
+          <p class="meta">Analysis of Auckland University Newsroom opinion piece.</p>
+	  <p>The MIT study adds to other education research papers that report similar findings. AI use must be carefully planned, understood, and accounted for when teaching and assessment marking.</p>
+          <p><a href="projects/artificial-intelligence-in-education.html" aria-label="Go to the AI in Education page.">Go to the AI in Education page.</a></p>
+        </article>
         <p><a href="publications.html" class="button" aria-label="See more publications by Michael Fenton">See more publications</a></p>
       </section>
     </main>
