--- a/talks.html
+++ b/talks.html
@@ -85,19 +85,16 @@
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Talks">
       <h2>Talks</h2>
       <ul>
-        <li id="feature-interview-and-video"><strong>Michael and Kimberley Fenton Get Kids into Coding and Digital Technology.</strong> — News feature and  video<br /><span class="meta"> <a href="https://www.stuff.co.nz/technology/102483973/robot-competition-replaces-steam-car-challenge-at-taranaki-science-fair" target="_blank" aria-label="Link to article and video">Link to article and video</a></span></li>
-        <li id="talk-reclaiming-science"><strong>From Galileo to LIGO: Reclaiming the Maker Space for Science.</strong> — SciCon 2016<br /><span class="meta">Keynote  &middot; <a href="files/michael-fenton-keynote.pdf"  target="_blank aria-label="Download talk slides as PDF file">Slides (PDF)</a></span></li>
-        <li id="feature-interview"><strong>Shining a Light on the Future:</strong> Scientist Michael Fenton interview<br /><span class="meta"> <a href="assets/img/michael-fenton-daily-news.jpg" target="_blank" aria-label="Link to article">Link to article</a></span></li>
+        <li id="feature-interview-and-video"><strong>Michael and Kimberley Fenton Get Kids into Coding and Digital Technology.</strong> — News feature and  video<br /><span class="meta"> <a href="https://www.stuff.co.nz/technology/102483973/robot-competition-replaces-steam-car-challenge-at-taranaki-science-fair" target="_blank" aria-label="Link to article and video">Link to article and video</a></span></li></ul><ul>
+        <li id="talk-reclaiming-science"><strong>From Galileo to LIGO: Reclaiming the Maker Space for Science.</strong> — SciCon 2016<br /><span class="meta">Keynote  &middot; <a href="files/michael-fenton-keynote.pdf"  target="_blank aria-label="Download talk slides as PDF file">Slides (PDF)</a></span></li></ul><ul>
+        <li id="feature-interview"><strong>Shining a Light on the Future:</strong> Scientist Michael Fenton interview<br /><span class="meta"> <a href="assets/img/michael-fenton-daily-news.jpg" target="_blank" aria-label="Link to article">Link to article</a></span></li></ul><ul>
         <li id="talk-enlightenment-and-education"><strong>Enlightenment and education: a journey through time and space.</strong> — Open Polytechnic Learning conference<br /><span class="meta">Keynote </span></li>
       </ul>
 	<h2>Science communication</h2>
-      <ul>
-        <li id="bill-pickering-nexus-research-group"><strong>Bill Pickering - Rocket Man.</strong> — by Michael Fenton, fact-checked by Bill Pickering<br /><span class="meta"> <a href="files/michael-fenton-bill-pickering.pdf" target="_blank" aria-label="Link to published article, New Zealand Science Teacher Journal">Link to published article, New Zealand Science Teacher Journal</a></span></li>
-      </ul>
-      <ul>
-        <li id="poster-science-education-network"><strong>The Dinosaurs Inside Us and Other Freaky Facts.</strong> — by Michael Fenton<br /><span class="meta"> <a href="files/michael-fenton-dinosaurs-inside-us.pdf" target="_blank" aria-label="Link to poster">Link to poster, 3D glasses friendly!</a></span></li>
-      </ul>
-      <ul>
+	<ul>
+        <li id="ai-in-education"><strong>AI in Education.</strong> — by Michael Fenton, LinkedIn post<br /><span class="meta"> <a href="projects/artificial-intelligence-in-education.html" aria-label="Link to LinkedIn post">Link to LinkedIn post (copy)</a></span></li></ul><ul>
+        <li id="bill-pickering-nexus-research-group"><strong>Bill Pickering - Rocket Man.</strong> — by Michael Fenton, fact-checked by Bill Pickering<br /><span class="meta"> <a href="files/michael-fenton-bill-pickering.pdf" target="_blank" aria-label="Link to published article, New Zealand Science Teacher Journal">Link to published article, New Zealand Science Teacher Journal</a></span></li></ul><ul>
+        <li id="poster-science-education-network"><strong>The Dinosaurs Inside Us and Other Freaky Facts.</strong> — by Michael Fenton<br /><span class="meta"> <a href="files/michael-fenton-dinosaurs-inside-us.pdf" target="_blank" aria-label="Link to poster">Link to poster, 3D glasses friendly!</a></span></li></ul><ul>
         <li id="michael-fenton-hpv-dvd-errors"><strong>Ministry of Health HPV DVD contains gross errors of fact</strong> — corrected after publicity from Michael Fenton<br /><span class="meta"> <a href="files/michael-fenton-HPV-DVD.pdf" target="_blank" aria-label="Link to article">Link to article - a nationally significant science education issue!</a></span></li>
       </ul>
       <p> More to be added soon...</p>
