--- a/teaching.html
+++ b/teaching.html
@@ -100,6 +100,10 @@
         <li>Universal Design for Learning (UDL)</li>
         <li>Low-floor, high-ceiling tasks</li>
       </ul>
+	<h3>AI in Education</h3>
+          <ul>
+            <li><a href="projects/artificial-intelligence-in-education.html" aria-label="Link to Michael's think piece.">Link to Michael's analysis and experience.</a></li>
+          </ul>
       <h3>Teaching - Primary to Postgraduate</h3>
           <ul>
             <li>Level 7 Grad Dip.Tchg Science and Mathematics Education and Education Leadership.</li>
