--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -98,7 +98,7 @@
 	    <li>These robust digital multimeters (DMM) can be used in a wide variety of subjects, such as Physical Education, Horticulture, Calculus and Statistics.</li>
             <li>Michael invented the "Build it, Test it, Use it" pedagogy for inquiry-based learning and discovery at home as well as school.</li>
 	    <li>He promoted affordable, inquiry-driven cross-curricula learning sharing his research at conferences, through publications, and on his Nexus Research Group website.</li>
-            <li>Michael's DMM digital multimeter datalogger technology is still being shared by other educators. Michael pioneered the general use of a low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible in resource-limited schools.</li>
+            <li>Michael's DMM digital multimeter datalogger technology is still being shared by other educators, such as the Sir Angus Tait Science Teaching Enrichment Programme, known as “SAT STEP”. Michael pioneered the general use of a low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible in resource-limited schools.</li>
           </ul>
 	</section>
 	<h3 id="build-it">Build it</h3>
@@ -130,6 +130,9 @@
 </p>
 	<h4 id="authentic-learning-at-school-and-home">Authentic cross-curricula learning at school and home</h4>
 	<p>In general the devices enabled students to sense more of the world around them. Students could sense things they could not see or touch themselves, and this raised their curiosity and interest. Collecting real data was exciting, and the data they collected had real-world consequences for them. Taking the multimeters out of the classroom permits learners to survey the school grounds, survey parks, and investigate their homes. Engaging with their own data, collected using equipment they built and understood, was shown to supported authentic learning, permit real-world problem solving, and enabled most students to reach the relational stage or higher on the SOLO taxonomy (Hattie and Brown, 2004). Students also used the f-word. They reported they had fun!</p>
+<img src="../assets/img/michael-fenton-procedure-to-test-sunglasses-UV.jpg" alt="SAT-STEP teacher using Michael's sensor sytem" width="500" />
+<p>LEFT: SAT STEP teacher using Michael's digital multimeter sensor sytem to test if sunglasses block ultra-violet (UV) light.</p>
+<p>RIGHT: Michael's method to connect sensors safely and securely to digital multimeter probe leads.</p>
 <div class="warning-box">
   <p><strong>Warning: DO NOT let students test boiling water or live electrical outlets!</strong> </p>
 </div>
