--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -128,6 +128,7 @@
 	<h3 id="use-it">Use it</h3>
 <p>While qualitative presence/absence readings may seem the less advanced activity compared to quantitative investigations, surveys of school grounds or local parks and estuaries can encourage higher level thinking and should not be dismissed without a clear understanding of the other learning opportunities that could arise. 
 </p>
+<img src="../assets/img/digital-multimeter-soil-sensing.jpg" alt="Digital multimeter soil surey" width="400" />
 	<h4 id="authentic-learning-at-school-and-home">Authentic cross-curricula learning at school and home</h4>
 	<p>In general the devices enabled students to sense more of the world around them. Students could sense things they could not see or touch themselves, and this raised their curiosity and interest. Collecting real data was exciting, and the data they collected had real-world consequences for them. Taking the multimeters out of the classroom permits learners to survey the school grounds, survey parks, and investigate their homes. Engaging with their own data, collected using equipment they built and understood, was shown to supported authentic learning, permit real-world problem solving, and enabled most students to reach the relational stage or higher on the SOLO taxonomy (Hattie and Brown, 2004). Students also used the f-word. They reported they had fun!</p>
 <img src="../assets/img/michael-fenton-procedure-to-test-sunglasses-UV.jpg" alt="SAT-STEP teacher using Michael's sensor sytem" width="500" />
