--- a/teaching.html
+++ b/teaching.html
@@ -120,8 +120,9 @@
             <li>Workshop Developer and Facilitator - CORE Education. Science Teacher Fellowship programmes.</li>
 	    <li>Workshop Developer and Facilitator - Focus Consultancy. Assessment design & moderation.</li>
 	    <li>Instructional Designer - EarnLearn. Assessment design & learning resources. Mathematics and Science expert.</li>
+	    <li>Writer/Instructional Designer - World Interactive Software: Year 12 Interactive Physics.</li>
           </ul>
-
+<img src="assets/img/michael-fenton-physics-interactive.jpg" alt="Year 12 Interactive Physics written by Michael Fenton" width="400" />
       <h3>Combined STEM for old and young - TV and movie props</h3>
       <figure>
         <img src="assets/img/b9.jpg" alt="Prototype B9 mobile robot and science lab. AI interactive voice control." width="400" height="400"/>
