--- a/publications.html
+++ b/publications.html
@@ -88,6 +88,9 @@
         <li id="pub-prof-develop-2015">Fenton, M., &amp; Fenton, C. (2015). Primary teachers' experiences of professional development in Science by
 distance learning. <em>Proceedings of the New Zealand Association for Cooperative Education international conference</em>, 15–17 April.</li>
         <li id="pub-multimeters-2011">Fenton, M. (2011). Using a digital multi-meter as an inexpensive data-logger substitute. <em>SCIOS</em>, Science Teachers Association of Western Australia.</li>
+	    <li>World Interactive Software: Year 12 Interactive Physics. Digital textbook.</li>
+          </ul>
+<img src="assets/img/michael-fenton-physics-interactive.jpg" alt="Year 12 Interactive Physics written by Michael Fenton" width="400" />
       </ol>
       <p> More to be added soon...</p>
     </main>
