--- a/projects/game-design-coding-learning.html
+++ b/projects/game-design-coding-learning.html
@@ -104,7 +104,7 @@
 	<h3 id="build-it">Build it</h3>
 	<p>Under-confident teachers and students were found to be confused by the markings on the digital multimeters. Two strategies were employed that seemed to overcome this. Firstly, a plastic cover was cut and placed over the central dial to cover distracting labels on the meter. An erasable marker was used to label the dial setting as ‘heat’ or ‘light’ or ‘salt’, etc. This aided the second strategy which was to remind students each time that we treat the meter as a ‘what does it measure today?’ machine.</p>
 <p>For safety reasons, as well as the ability to quickly change sensors, an electrical terminal block was fitted to the DMM probes. The probes that come with the meters had pointed ends that could cause injury if used improperly. In the trial only single component sensors were used. Some components must be inserted ‘the right way around’, such as light emitting diodes (LED’s) and signal diodes. It was a simple matter to remind students that if the display does not give an appropriate reading, just insert the sensor the other way around. </p>
-<img src="../assets/img/digital-multimeter-built-it.jpg" alt="Digital multimeter data logger assembly" width="400" />
+<img src="../assets/img/editor-example.png" alt="'Code it' activity"/>
 <p> </p>
 <blockquote><span lang="en">"<strong>'Build it'</strong> Digital multimeter data logger assembly. Meter lead tips are fitted into a terminal block with a LED functioning as a visible light sensor fitted to the other side of the block. The dial cover is in place. The dial setting is to 200mV range.</span></blockquote>
 	<h3 id="test-it">Test it</h3>
@@ -122,7 +122,7 @@
 
 <p>When analysing the data and discussing the activities, there were plenty of opportunities for students to learn about calibrating sensors, such as the temperature and angle sensors. When activities were based on surveys or mapping, students talked about the need to take more than one measurement to get an average reading.</p>
 
-<img src="../assets/img/digital-multimeter-angle-sensor.jpg" alt="'Test It' activity - angle sensor" width="500" />
+<img src="../assets/img/micahel-fenton-c-coding.png" alt="'Code it' activity" />
 <p> </p>
 <blockquote><span lang="en">"<strong>'Test it'</strong> digital multimeter angle sensor. Students calibrate the sensor plotting a simple line graph. The change in resistance of a volume control dial functions as an angle sensor.</span></blockquote>
 	<h3 id="use-it">Use it</h3>
@@ -140,14 +140,14 @@
 	<p>Since the early 2000's Michael has developed a number of sensors; some are shown on his YouTube channel. Some sensors are very simple single component sensors costing a few cents. Other sensors are inexpensive but include a power source and a few more components. Apart from the straightforward voltage, current and resistance measurements, the multi-meters can also detect; visible light, infra-red light, ultra-violet light, ionising radiation such as alpha particles, temperature, angle, bend, salt, humidity, pressure, touch, paper thickness, mobile phone transmissions, static electric fields, and more.</p>
 	<blockquote><span lang="en"><a href="../files/michael-fenton-using-digital-multimeters.pdf" target="_blank">Download a workshop presentation [PDF]</a></span></blockquote>
 <p>In this video Michael imagines equitable access to authentic learning tools if his digital multimeter kit is added to a learners school stationery supply. Green School Educators Programme, Teaching for sustainability: wall-less teaching.</p>
-<div class="video-container">
-<iframe 
-        src="https://www.youtube.com//embed/LwZzSn9vZms"
-        title="Sales pitch - using digital multimeters for cross-curricula STEM learning at home."
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-</iframe>
-</div>
+<img src="../assets/img/b9-environmental-control-robot-webserver.jpg" alt="'Test It' B9 robot web server" />
+<img src="../assets/img/michael-fenton-rigel.jpg" alt="'Test It' activity - angle sensor" />
+<img src="../assets/img/michael-fenton-dna-lab- simulator.jpg" alt="'Test It' activity - angle sensor" />
+<img src="../assets/img/michael-fenton-graph-explorer2.jpg" alt="'Test It' activity - angle sensor" />
+<img src="../assets/img/michael-fenton-graph-explorer.jpg" alt="'Test It' activity - angle sensor" />
+<img src="../assets/img/michael-fenton-stingray-game.jpg" alt="'Test It' activity - angle sensor" />
+<img src="../assets/img/micahel-fenton-transylvania.jpg" alt="'Test It' activity - angle sensor" />
+<img src="../assets/img/micahel-fenton-interactive-tardis.jpg" alt="'Test It' activity - angle sensor" />
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented the simple assembly process and working principles in YouTube videos. He demonstrates the use of a terminal block to attach sensors to a digital multimeter. The markings around the dial are hidden using a plastic cover and the 'yellow boxes' become simply a heat sensor, or a light sensor, depending on the label written in marker. This focuses students attenttion to the readings until they become expert users and understand the different settings.</p>
 <div class="video-container">
