--- a/cv.html
+++ b/cv.html
@@ -139,6 +139,7 @@
 	   <li>Research active - long list of education conference publications/presentations.</li>
           </ul>
         </li>
+	<br>
 	<li><strong>STEM subject expertise</strong>:
           <ul>
             <li><strong>Postgraduate</strong>: Level 7 Grad. Dip. Science and Mathematics Education and Education Leadership.</li>
@@ -164,7 +165,7 @@ level, sub-degree and degree level programmes and courses.</li>
           </ul>
     <h3>Awards and Fellowships</h3>
           <ul>
-            <li>New Zealand Ministry of Education E-Learning Fellow. <a href="https://www.beehive.govt.nz/release/innovative-teachers-explore-new-technology-horizons" target="_blank">Government press release.</a></li>
+            <li>New Zealand Ministry of Education E-Learning Teacher Fellow. <a href="https://www.beehive.govt.nz/release/innovative-teachers-explore-new-technology-horizons" target="_blank">Government press release.</a></li>
             <li>Prime Minister’s Education Excellence award finalist, Excellence in Leading. <a href="https://www.youtube.com/watch?v=tnqhZBkrIP0" target="_blank">Video link.</a></li>
             <li>DEANZ Excellence Award, Distance Education Association of New Zealand <a href="https://www.scoop.co.nz/stories/ED1405/S00015/open-polytechnic-lecturer-wins-e-learning-award.htm" target="_blank">(now called FLANZ)</a></li>
             <li>Kiwibank New Zealander of the Year - Local Hero Medal, services to science education</li>
