--- a/teaching.html
+++ b/teaching.html
@@ -114,6 +114,7 @@
           </ul>
 	<h3>Teaching Leadership</h3>
           <ul>
+	    <li>New Zealand Ministry of Education E-learning Fellow: <a href="files/michael-fenton-elearning-report.pdf" target= "_blank" aria-label="Link to Michael's teaching research.">Michael's report & the state of Science education in New Zealand.</a></li>
             <li>Education Lead - Private Training Establishment (PTE); Agriculture and Construction.</li>
             <li>Programme Leader - Open Polytechnic and the Western Institute of Technology at Taranaki.</li>
             <li>Green School New Zealand - leader of Science and Mathematics programmes (Year 7 - 13). Cross-curricula course design and assessment.</li>
