--- a/projects/casio-calculator-picaxe-sensors.html
+++ b/projects/casio-calculator-picaxe-sensors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Casio graphic calculators as a sensor display and data analysis tool</title>
+  <title>Michael Fenton — Picaxe to Casio calculator bi-directional data logger and remote control</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
@@ -84,12 +84,13 @@
 	He knew that investigating how the world works requires seeing more than the eyes alone can reveal.
 	School science equipment is limited, with expensive data loggers and sensors reserved for senior classes.
  	After teaching Chemistry, Biology, Physics and Calculus, he wondered if he could invent a low cost system that would permit authentic hands-on data collection for cross-curricula learning in these subject.</p> 
-<p>He was using Picaxe microcontrollers with his Nexus Research Group students, so he focused on connecting a Picaxe-18 to a Casio FX-9750 graphic calculator. He invented a reliable and robust connector and interface circuit for bi-directional communication. This upgrades the Casio FX-9750 and FX-9860 graphic calculators to robot remote control units and sensor data display and recording units.</p>
+<p>He was using Picaxe microcontrollers with his Nexus Research Group students, so he focused on connecting a Picaxe-18 to a Casio FX-9750 graphic calculator. He invented a reliable and robust Picaxe to Casio calculator bi-directional data logger and remote control system. This upgrades the Casio FX-9750 and FX-9860 graphic calculators to robot remote control units and sensor data display and recording units.</p>
+<p>The Picaxe / Casio data logger can accept a radio transmitter module for wireless remote bi-directional communication. A test vehicle called CASI worked flawlessly as a proof-of-concept</p>
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
             <li>Michael pioneered classroom trials for using a standard school Casio graphic calulator as a datalogger sensor system for cross-curricular learning.</li>
             <li>He developed a wide range of DIY home-made and low-cost sensors, many cost just a few cents. Sensors can measure range (distance), water vapour, temperature, pressure, alpha radiation, visible light, ultra violet (UV) light, infra red (IR) light, water hardness, static electric fields, mobile phone signals, angles, magnetic fields, and salinity.</li>
-	    <li>This system provided a robust low-cost tool for collecting data for use in senior high school subjects, such as Physical Education, Horticulture, Biology, Chemistry, Physics, Earth and Space Science, Calculus, and Statistics.</li>
+	    <li>This Picaxe / Casio calculator communication system provided a robust low-cost tool for collecting data for use in senior high school subjects, such as Physical Education, Horticulture, Biology, Chemistry, Physics, Earth and Space Science, Calculus, and Statistics.</li>
 	    <li>Although forum discussions survive, the original concept and wider implementation of using a school-issue Casio graphic calculator as a field data logger and display tool were first published by Michael Fenton on the Nexus Research Group website (now offline). This work was presented at various national and international education conferences.</li>
             <li>Michael pioneered the general use of a low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible in resource-limited schools.</li>
           </ul>
