--- a/projects.html
+++ b/projects.html
@@ -88,8 +88,8 @@
           <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Link to digital multimeter project details">Link to digital multimeter project details</a></p>
         </article>
         <article class="card" aria-labelledby="project2-title">
-          <h4 id="project2-title">Picaxe Casio Graphic Calculator: Low-Cost Sensor Upgrade for Authentic STEM Learning</h4>
-          <p><a href="projects/casio-calculator-picaxe-sensors.html" aria-label="Link to Casio and Picaxe project details">Link to Casio and Picaxe project details</a></p>
+          <h4 id="project2-title">Next-Generation Casio Calculator Datalogger for $10. Providing equity and accessibility in STEM education</h4>
+          <p><a href="projects/casio-calculator-sensor-upgrade.html" aria-label="Link to Casio and Picaxe project details">Link to Casio FX-9750 graphic calculator $10 data logger project details</a></p>
         </article>
         <article class="card" aria-labelledby="project2-title">
           <h4 id="project3-title">Art Meets Science with Digital Technology: The Real-world Interactive Games and Electronics Link</h4>
